--- a/package.json
+++ b/package.json
@@ -45,12 +45,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@graphql-codegen/cli": "5.0.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-immutable": "^1.0.0",
     "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-promise": "^6.1.1",
-    "@graphql-codegen/client-preset": "4.1.0"
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
