--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-immutable": "^1.0.0",
     "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-promise": "^6.1.1"
+    "eslint-plugin-promise": "^6.1.1",
+    "node-sass": "^7.0.3"
   }
 }
