--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.37",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "fuzzysort": "^2.0.4",
     "graphql": "^16.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
