--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +58,8 @@
     "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-promise": "^6.1.1",
+    "gh-pages": "^5.0.0",
     "node-sass": "^7.0.3"
-  }
+  },
+  "homepage": "https://davinun99.github.io/frontendChallenge"
 }
