--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
